syntax = "proto3";

package com.testcompany.user.api.v1;

import "com/testcompany/common/types/v1/common.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
  com.testcompany.common.types.v1.Status status = 2;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string user_id = 1;
  com.testcompany.common.types.v1.Status status = 2;
}

message UpdateUserRequest {
  string user_id = 1;
  User user = 2;
}

message UpdateUserResponse {
  com.testcompany.common.types.v1.Status status = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  com.testcompany.common.types.v1.Status status = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
  com.testcompany.common.types.v1.Timestamp created_at = 5;
  com.testcompany.common.types.v1.Timestamp updated_at = 6;
}